# fix-struct-asym

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
fixed/: 1ts6.cif  2g10.cif  2k9y.cif
reports/: report.md  report_jp.md  style.css
reports/data/: results.json
scripts/: find_orphan_chains.py
src/fix_struct_asym/: __init__.py  core.py  find.py  fix.py  models.py
src/fix_struct_asym/cli/: __init__.py  _common.py  find_cmd.py  fix_cmd.py
tests/: conftest.py  test_find.py  test_find_orphan_chains.py  test_fix.py
