[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fix-struct-asym"
version = "0.1.0"
description = "Detect and fix _struct_asym inconsistencies in PDB CIF files"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "gemmi>=0.7.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
]

[project.scripts]
find-missing-struct-asym = "fix_struct_asym.cli.find_cmd:app"
fix-missing-struct-asym = "fix_struct_asym.cli.fix_cmd:app"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.9.0",
    "ty>=0.0.1a6",
]

[tool.hatch.build.targets.wheel]
packages = ["src/fix_struct_asym"]

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # Pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
]

[tool.ruff.lint.isort]
known-first-party = ["fix_struct_asym"]

[tool.ty.environment]
python-version = "3.10"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
